--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,40 @@
 [pytest]
+# Python path for imports
 pythonpath = library/integration_library_builtIn
+
+# Test discovery
+testpaths = tests
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
+
+# pytest-bdd settings
+bdd_features_base_dir = tests/features
+
+# Markers for test filtering
+markers =
+    smoke: Quick smoke tests
+    services: Service discovery tests
+    deployments: Deployment management tests
+    statefulsets: StatefulSet management tests
+    pods: Pod operations tests
+    scaling: Scaling operations
+    health: Health check tests
+    commands: Command execution tests
+    cleanup: Cleanup/deletion tests
+    parametrized: Parametrized test scenarios
+
+# Output settings
+addopts = 
+    -v
+    --tb=short
+    --strict-markers
+
+# Logging
+log_cli = true
+log_cli_level = INFO
+log_cli_format = %(asctime)s [%(levelname)s] %(message)s
+log_cli_date_format = %Y-%m-%d %H:%M:%S
+
+# Console output
+console_output_style = progress
